// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correct form for failed state for resetting password 1`] = `
.c9 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  margin: 0 0 24px 0;
  min-height: 40px;
  border: 2px solid;
  border-radius: 8px;
  width: 100%;
  border-color: #FF6257;
}

.c6 a {
  color: #FFFFFF;
}

.c7 {
  padding: 12px 16px;
  overflow: auto;
  word-break: break-word;
  display: flex;
  align-items: center;
  background: rgba(255, 98, 87, 0.1);
}

.c8 {
  border-radius: 50%;
  line-height: 0;
  margin-right: 16px;
  color: #000000;
  background: #FF6257;
  padding: 8px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c14 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  font-weight: 300;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c14:hover,
.c14:focus,
.c14:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c14::-ms-clear {
  display: none;
}

.c14::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c14:read-only {
  cursor: not-allowed;
}

.c14:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.035px;
  color: rgba(255, 255, 255, 0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        2
         of 
        3
      </div>
      <h2
        class="c5"
      >
        Create a New Password
      </h2>
    </div>
  </div>
  <div
    class="c6"
    kind="danger"
    width="100%"
  >
    <div
      class="c7"
      kind="danger"
    >
      <div
        class="c8"
        kind="danger"
      >
        <span
          class="c9 icon icon-warning"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
            />
            <path
              d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
            />
            <path
              clip-rule="evenodd"
              d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          failed to reset password
        </div>
      </div>
    </div>
  </div>
  <div
    class="c12"
  >
    <label
      class="c13"
    >
      New Password
      <input
        autocomplete="off"
        class="c14"
        inputmode="text"
        placeholder="Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <div
    class="c12"
  >
    <label
      class="c13"
    >
      Confirm New Password
      <input
        autocomplete="off"
        class="c14"
        inputmode="text"
        placeholder="Confirm Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <button
    class="c15"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;

exports[`render correct form for resetting password 1`] = `
.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c9:focus-visible,
.teleport-button__force-focus-visible .c9 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c9:hover,
.teleport-button__force-hover .c9 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c9:active,
.teleport-button__force-active .c9 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c9:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c8 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  font-weight: 300;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c8:hover,
.c8:focus,
.c8:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c8:read-only {
  cursor: not-allowed;
}

.c8:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.035px;
  color: rgba(255, 255, 255, 0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        2
         of 
        3
      </div>
      <h2
        class="c5"
      >
        Create a New Password
      </h2>
    </div>
  </div>
  <div
    class="c6"
  >
    <label
      class="c7"
    >
      New Password
      <input
        autocomplete="off"
        class="c8"
        inputmode="text"
        placeholder="Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <div
    class="c6"
  >
    <label
      class="c7"
    >
      Confirm New Password
      <input
        autocomplete="off"
        class="c8"
        inputmode="text"
        placeholder="Confirm Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <button
    class="c9"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;
